z-index fix

--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ body{
     left: -20px;
     right: 30px;
     width: 100%;
-    z-index: 10;
+    z-index: 100;
     transition: var(--transition);
     list-style: none;
     display: grid;
